--- a/MvcMusicStore/MvcMusicStore.csproj
+++ b/MvcMusicStore/MvcMusicStore.csproj
@@ -199,6 +199,11 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Album.cs" />
+    <Compile Include="Controllers\AlbumsController.cs" />
+    <Compile Include="Models\ProductModel.cs" />
+    <Compile Include="Controllers\ShoppingCartController.cs" />
+    <Compile Include="Models\ShoppingCartViewModel.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -258,9 +263,15 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Albums\ListWeaklyTyped.cshtml" />
+    <Content Include="Views\Albums\ListStronglyTyped.cshtml" />
+    <Content Include="Views\ShoppingCart\Index.cshtml" />
+    <Content Include="Views\Home\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Samples\AlbumList\" />
+    <Folder Include="Samples\ShoppingCartViewModel\" />
     <Folder Include="Views\Store\" />
   </ItemGroup>
   <ItemGroup>
