--- a/MvcMusicStore/packages.config
+++ b/MvcMusicStore/packages.config
@@ -37,4 +37,6 @@
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
+  <package id="Wrox.ProMvc5.Views.AlbumList" version="1.0.0.0" targetFramework="net451" />
+  <package id="Wrox.ProMvc5.Views.ViewModel" version="1.0.0" targetFramework="net451" />
 </packages>
